# NewsAggregator

./: AGENTS.md  README.md
BE/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
BE/.cursor/rules/: api.mdc  architecture.mdc  code_guidelines.mdc  database.mdc  docker.mdc  ingestion.mdc  project.mdc
BE/alembic/: env.py
BE/alembic/versions/: 001_initial_schema.py
BE/scripts/: start.sh
BE/src/news_aggregator/: __init__.py  main.py
BE/src/news_aggregator/api/: __init__.py  app.py  dependencies.py  exception_handlers.py
BE/src/news_aggregator/api/mappers/: __init__.py  search.py
BE/src/news_aggregator/api/routers/: __init__.py  health.py  search.py  setup.py
BE/src/news_aggregator/api/schemas/: __init__.py  errors.py  health.py  search.py  setup.py
BE/src/news_aggregator/application/: __init__.py
BE/src/news_aggregator/application/interfaces/: __init__.py  content_extractor.py  embedding_provider.py  feed_discovery.py  feed_parser.py  ingestion_pipeline.py  text_chunker.py
BE/src/news_aggregator/application/services/: __init__.py  ingestion_service.py  search_service.py  source_service.py
BE/src/news_aggregator/domain/: __init__.py
BE/src/news_aggregator/domain/entities/: __init__.py  news_chunk.py  source.py
BE/src/news_aggregator/domain/exceptions/: __init__.py  search.py  source.py
BE/src/news_aggregator/domain/repositories/: __init__.py  (+4 more)
BE/src/news_aggregator/infrastructure/: __init__.py
BE_CC/: .env  AGENTS.md  CLAUDE.md  README.md  news.db  pyproject.toml
BE_CC/.claude/: settings.json
BE_CC/app/: config.py  database.py  main.py
BE_CC/app/infrastructure/: embedder.py  qdrant_client.py
BE_CC/app/models/: source.py
BE_CC/app/routers/: search.py  setup.py
BE_CC/app/schemas/: search.py  source.py
BE_CC/app/services/: ingestion_service.py  search_service.py  source_service.py
BE_CC/spec/: 01-overview.md  02-architecture.md  03-data-model.md  04-api.md  05-ingestion.md  06-project-structure.md
BE_CC/tests/: test_chunking.py  test_source_service.py
(+65 files in other folders)
